[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/default_medium.tres" type="DynamicFont" id=1]
[ext_resource path="res://entities/coding/MethodUI.gd" type="Script" id=2]

[node name="MethodUI" type="ColorRect"]
margin_right = 284.0
margin_bottom = 39.0
rect_min_size = Vector2( 0, 39 )
mouse_default_cursor_shape = 2
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 4.0
margin_right = 276.0
margin_bottom = 35.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
margin_right = 156.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 1 )
text = "test_method"

[connection signal="gui_input" from="." to="." method="_on_MethodUI_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_MethodUI_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MethodUI_mouse_exited"]
